--- a/src/DisplayConfig.Wpf/MainWindow.xaml
+++ b/src/DisplayConfig.Wpf/MainWindow.xaml
@@ -1,8 +1,8 @@
-﻿<Window x:Class="DynamicRange.Wpf.MainWindow"
+﻿<Window x:Class="DisplayConfig.Wpf.MainWindow"
 		xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 		xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-		xmlns:local="clr-namespace:DynamicRange.Wpf"
-		Title="DynamicRange.Wpf"
+		xmlns:local="clr-namespace:DisplayConfig.Wpf"
+		Title="DisplayConfig.Wpf"
 		Width="600" Height="300">
 	<Window.DataContext>
 		<local:MainWindowViewModel/>
