--- a/src/DisplayInfo.Uwp/App.xaml
+++ b/src/DisplayInfo.Uwp/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="DynamicRange.Uwp.App"
+    x:Class="DisplayInfo.Uwp.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:DynamicRange.Uwp">
+    xmlns:local="using:DisplayInfo.Uwp">
 
 </Application>
