--- a/src/DisplayInfo.Uwp/MainPage.xaml
+++ b/src/DisplayInfo.Uwp/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="DynamicRange.Uwp.MainPage"
+﻿<Page x:Class="DisplayInfo.Uwp.MainPage"
 	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
